--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     integrity="sha512-luMnTJZ7oEchNDZAtQhgjomP1eZefnl82ruTH/3Oj/Yu5qYtwL7+dVRccACS/Snp1lFXq188XFipHKYE75IaQQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>
-    const socket = io('https://prueba2-pruebas.up.railway.app/');
+    const socket = io('http://localhost:8081');
     const formulario = document.getElementById('miFormulario');
     const mensaje = document.getElementById('mensaje');
     const txtmensaje = document.getElementById('mensajes');
